[gd_scene load_steps=26 format=2]

[ext_resource path="res://art/background_0_1_solid.png" type="Texture" id=1]
[ext_resource path="res://art/piece_sun.png" type="Texture" id=2]
[ext_resource path="res://scripts/Grid.gd" type="Script" id=3]
[ext_resource path="res://art/timer_bar_over.png" type="Texture" id=4]
[ext_resource path="res://art/timer_bar_progress.png" type="Texture" id=5]
[ext_resource path="res://art/timer_bar_under.png" type="Texture" id=6]
[ext_resource path="res://scripts/TimerBarProgress.gd" type="Script" id=7]
[ext_resource path="res://scenes/UIRectangleBox.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/CharacterSlot.tscn" type="PackedScene" id=9]
[ext_resource path="res://art/grid_bg.png" type="Texture" id=10]
[ext_resource path="res://scenes/UISquareBox.tscn" type="PackedScene" id=11]
[ext_resource path="res://scripts/UI.gd" type="Script" id=13]
[ext_resource path="res://art/piece_chaos.png" type="Texture" id=14]
[ext_resource path="res://art/piece_star.png" type="Texture" id=15]
[ext_resource path="res://art/piece_order.png" type="Texture" id=16]
[ext_resource path="res://art/piece_moon.png" type="Texture" id=17]
[ext_resource path="res://scripts/PieceCounter.gd" type="Script" id=18]
[ext_resource path="res://scripts/Util.gd" type="Script" id=19]
[ext_resource path="res://fonts/ttf/Kenney Future Narrow.ttf" type="DynamicFontData" id=20]
[ext_resource path="res://scripts/ComboLabel.gd" type="Script" id=21]

[sub_resource type="Theme" id=1]

[sub_resource type="Theme" id=5]

[sub_resource type="Theme" id=2]

[sub_resource type="Theme" id=3]

[sub_resource type="DynamicFont" id=4]
size = 41
font_data = ExtResource( 20 )

[node name="GameWindow" type="Node2D"]
script = ExtResource( 19 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )

[node name="MiddleUI" type="VBoxContainer" parent="." groups=["game_stats"]]
margin_left = 724.0
margin_top = 118.0
margin_right = 919.0
margin_bottom = 347.0
theme = SubResource( 1 )
custom_constants/separation = 13
script = ExtResource( 13 )

[node name="TurnCounter" parent="MiddleUI" instance=ExtResource( 8 )]

[node name="Text" parent="MiddleUI/TurnCounter" index="0"]
theme = SubResource( 5 )

[node name="ComboCounter" parent="MiddleUI" instance=ExtResource( 8 )]
margin_top = 121.0
margin_bottom = 229.0

[node name="BottomSlots" type="HBoxContainer" parent="."]
margin_left = 959.0
margin_top = 846.0
margin_right = 1733.0
margin_bottom = 983.997
custom_constants/separation = 159
script = ExtResource( 18 )

[node name="bottom_slot_sun" parent="BottomSlots" instance=ExtResource( 11 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 0.0
margin_bottom = 137.0

[node name="piece" parent="BottomSlots/bottom_slot_sun/bottom_slot_0" index="0"]
texture = ExtResource( 2 )

[node name="bottom_slot_moon" parent="BottomSlots" instance=ExtResource( 11 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 159.0
margin_right = 159.0
margin_bottom = 137.0

[node name="piece" parent="BottomSlots/bottom_slot_moon/bottom_slot_0" index="0"]
texture = ExtResource( 17 )

[node name="bottom_slot_star" parent="BottomSlots" instance=ExtResource( 11 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 318.0
margin_right = 318.0
margin_bottom = 137.0

[node name="piece" parent="BottomSlots/bottom_slot_star/bottom_slot_0" index="0"]
texture = ExtResource( 15 )

[node name="bottom_slot_order" parent="BottomSlots" instance=ExtResource( 11 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 477.0
margin_right = 477.0
margin_bottom = 137.0

[node name="piece" parent="BottomSlots/bottom_slot_order/bottom_slot_0" index="0"]
texture = ExtResource( 16 )

[node name="bottom_slot_chaos" parent="BottomSlots" instance=ExtResource( 11 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 636.0
margin_right = 636.0
margin_bottom = 137.0

[node name="piece" parent="BottomSlots/bottom_slot_chaos/bottom_slot_0" index="0"]
texture = ExtResource( 14 )

[node name="CharacterContainer" type="GridContainer" parent="."]
margin_left = 21.0
margin_top = 556.549
margin_right = 908.0
margin_bottom = 1061.55
theme = SubResource( 2 )
custom_constants/vseparation = 8
custom_constants/hseparation = 43
columns = 3

[node name="Char1_Dmg" parent="CharacterContainer" instance=ExtResource( 8 )]
size_flags_horizontal = 2

[node name="DisplayTexture2" parent="CharacterContainer" instance=ExtResource( 8 )]
margin_left = 310.0
margin_right = 505.0
size_flags_horizontal = 2

[node name="DisplayTexture3" parent="CharacterContainer" instance=ExtResource( 8 )]
margin_left = 620.0
margin_right = 815.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="Char1_PortraitBorder" parent="CharacterContainer" instance=ExtResource( 9 )]
margin_top = 116.0
margin_right = 267.0
margin_bottom = 505.0

[node name="PortraitBorder2" parent="CharacterContainer" instance=ExtResource( 9 )]
margin_left = 310.0
margin_top = 116.0
margin_right = 577.0
margin_bottom = 505.0

[node name="PortraitBorder3" parent="CharacterContainer" instance=ExtResource( 9 )]
margin_left = 620.0
margin_top = 116.0
margin_right = 887.0
margin_bottom = 505.0

[node name="Gried_field" type="TextureRect" parent="."]
margin_left = 954.0
margin_top = 53.0
margin_right = 1735.0
margin_bottom = 836.0
texture = ExtResource( 10 )

[node name="Grid" type="Node2D" parent="."]
script = ExtResource( 3 )
width = 6
height = 6
start = Vector2( 1024, 128 )
offset = 128
piece_y_offset = 5
empty_spaces = PoolVector2Array( 0, 0, 5, 0, 0, 5, 5, 5 )

[node name="TurnTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="ScoreTimer" type="Timer" parent="."]
one_shot = true

[node name="FallTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="FillTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="DestroyTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Timer" type="TextureProgress" parent="."]
margin_left = 1744.0
margin_top = 58.0
margin_right = 1795.0
margin_bottom = 828.0
max_value = 50.0
step = 0.1
value = 13.6
texture_under = ExtResource( 6 )
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 5 )
fill_mode = 3
script = ExtResource( 7 )

[node name="ComboLabel" type="Label" parent="."]
modulate = Color( 0.890196, 0.231373, 0.231373, 1 )
margin_left = 1156.0
margin_top = 690.0
margin_right = 1504.49
margin_bottom = 792.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
text = "5 Combo!"
align = 1
valign = 1
script = ExtResource( 21 )

[node name="Tween" type="Tween" parent="ComboLabel"]

[connection signal="update_piece_count" from="Grid" to="BottomSlots" method="_on_Grid_update_piece_count"]
[connection signal="timeout" from="TurnTimer" to="Grid" method="_on_TurnTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="Grid" method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="FallTimer" to="Grid" method="_on_FallTimer_timeout"]
[connection signal="timeout" from="FillTimer" to="Grid" method="_on_FillTimer_timeout"]
[connection signal="timeout" from="DestroyTimer" to="Grid" method="_on_DestroyTimer_timeout"]

[editable path="MiddleUI/TurnCounter"]
[editable path="MiddleUI/ComboCounter"]
[editable path="BottomSlots/bottom_slot_sun"]
[editable path="BottomSlots/bottom_slot_moon"]
[editable path="BottomSlots/bottom_slot_star"]
[editable path="BottomSlots/bottom_slot_order"]
[editable path="BottomSlots/bottom_slot_chaos"]
[editable path="CharacterContainer/Char1_PortraitBorder"]
